k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zenoingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service-front
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: my-service-back
            port:
              number: 8000
